trunk/tests/functional/sessionj/test/functional/compilationerror/MultiTargetReceive.sj
class MultiTargetReceive {
    public void error(SJSocket s1, SJSocket s2) {
        <s1,s2>.receive();
    }
}
